<resources>
    <!-- MAIN -->
    <string name="app_name">Walk Durations</string>
    <string name="author_email">mat.woess@gmail.com</string>

    <!-- Nav Bar -->
    <string name="nav_item_current">Current</string>
    <string name="nav_item_history">History</string>
    <string name="nav_item_routes">Routes</string>

    <!-- Menus -->
    <string name="menu_main_settings">Settings</string>
    <string name="menu_main_info">About</string>
    <string name="menu_clear_history">Clear history</string>
    <string name="menu_delete_all_routes">Delete all routes</string>
    <string name="menu_rearrange_routes">Rearrange routes</string>
    <string name="menu_apply_changes_apply">Apply</string>
    <string name="menu_apply_changes_cancel">Cancel</string>

    <!-- SETTINGS -->
    <string name="activity_title_settings">Settings</string>
    <!-- General -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Walker</string>

    <!-- Default Route -->
    <string name="pref_header_default_route">Default route</string>
    <string name="pref_title_default_route">Default route</string>
    <string-array name="pref_default_route_titles">
        <item>None</item>
    </string-array>
    <string-array name="pref_default_route_values">
        <item>""</item>
    </string-array>

    <!-- Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 minute</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_enable_notifications">Enable</string>
    <string name="pref_title_notifications_sound">Sound</string>
    <string name="pref_title_notifications_led">LED</string>
    <string name="pref_title_notifications_vibrate">Vibrate</string>
    <string name="pref_sound_none">None</string>
    <string name="channel_name">Ongoing Walks</string>
    <string name="channel_description">Channel for ongoing walks</string>
    <string name="notification_action_pause">PAUSE</string>
    <string name="notification_action_resume">RESUME</string>
    <string name="notification_action_stop">STOP</string>

    <!-- ACTIVITIES AND CONTROLS -->
    <!-- ActivityCreateRoute -->
    <string name="title_activity_create_route">Create a route</string>
    <string name="title_btn_save">Save Route</string>
    <string name="route_start_prefix">Start: %s</string>
    <string name="route_end_prefix">End:&#160;&#160; %s</string>
    <string name="end_address_title">End</string>
    <string name="start_address_title">Start</string>
    <string name="route_name">Name</string>

    <!-- Card default texts -->
    <string name="default_walk_route">default_route</string>
    <string name="default_walk_duration">00:00</string>
    <string name="default_walk_date">01.01.2017</string>
    <string name="default_walk_weekday">Weekday</string>
    <string name="default_route_name">route_name</string>
    <string name="default_route_distance">100m</string>
    <string name="default_route_start_point">Start point</string>
    <string name="default_route_end_point">End point</string>

    <!-- Dialog route -->
    <string name="dialog_route_used_hint">Name already used!</string>
    <string name="dialog_route_title">Route name</string>

    <!-- Current Fragment -->
    <string name="timer_default_value">00:00</string>
    <string name="current_rbtn_text">STOP</string>
    <string name="title_rearrange">Rearrange</string>
    <string name="btn_edit_route">EDIT</string>
</resources>
