<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key=""
        android:title="@string/pref_header_general">
        <ListPreference
            android:defaultValue="None"
            android:key="default_route"
            android:title="@string/pref_title_default_route" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key=""
        android:title="@string/pref_header_notifications">
        <SwitchPreference
            android:defaultValue="true"
            android:key="enable_notifications"
            android:title="@string/pref_title_enable_notifications" />
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="enable_notifications"
            android:key="notifications_vibrate"
            android:title="@string/pref_title_notifications_vibrate" />
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="enable_notifications"
            android:key="notifications_led"
            android:title="@string/pref_title_notifications_led" />
    </PreferenceCategory>
</PreferenceScreen>
