<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="enable_notifications"
        android:title="@string/pref_title_enable_notifications" />

    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="enable_notifications"
        android:key="notifications_sound"
        android:ringtoneType="notification"
        android:title="@string/pref_title_notifications_sound" />

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="enable_notifications"
        android:key="notifications_vibrate"
        android:title="@string/pref_title_notifications_vibrate" />

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="enable_notifications"
        android:key="notifications_led"
        android:title="@string/pref_title_notifications_led" />

</PreferenceScreen>
