<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="@dimen/dialog_route_padding">

    <TextView
        android:id="@+id/txt_dialog_route_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_route_title"
        android:textAllCaps="true"
        android:textSize="@dimen/dialog_route_title_size"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txt_dialog_name_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_route_used_hint"
        android:textColor="@android:color/holo_red_light"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/txt_dialog_route_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/route_name"
        android:inputType="text"/>
</LinearLayout>