<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:paddingLeft="@dimen/walk_card_padding"
              android:paddingRight="@dimen/walk_card_padding"
              android:paddingTop="@dimen/walk_card_padding">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                        android:id="@+id/note_card_view"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:clickable="true"
                                        android:foreground="?android:attr/selectableItemBackground"
                                        card_view:cardCornerRadius="@dimen/note_corner_radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWalkCard"
            android:padding="@dimen/walk_card_padding">

            <TextView
                android:id="@+id/txt_walk_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginTop="@dimen/margin_walk_card_top"
                android:text="@string/default_walk_duration"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/txt_walk_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txt_walk_duration"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginTop="@dimen/margin_walk_date_top"
                android:text="@string/default_walk_date"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/txt_walk_route"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/txt_walk_date"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/activity_margin"
                android:text="@string/default_walk_route"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>